# apt2brew

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  apt2brew.gpg.key  index.html  robots.txt  sitemap.xml
.github/workflows/: deploy-site.yml  release-deb.yml
aliases/: apt-to-brew.json  blocklist.json  snap-to-brew.json
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  PROJECT_STRUCTURE.md  REVIEW_CHECKLIST.md  ROADMAP.md
pool/main/a/apt2brew/: apt2brew_0.1.0-1_amd64.deb
src/: main.rs
src/application/: migrate.rs  mod.rs  rollback.rs  scan.rs
src/domain/: mod.rs  package.rs  pkg_name.rs  plan.rs  risk.rs
src/infrastructure/: aliases.rs  apt.rs  brew.rs  filesystem.rs  migrate.rs  mod.rs  rollback.rs  snap.rs
src/presentation/: cli.rs  mod.rs  output.rs
src/presentation/tui/: app.rs  input.rs  mod.rs  progress.rs  render.rs  rollback_tui.rs  widgets.rs
web/: CNAME  index.html  robots.txt
