[package]
name = "apt2brew"
version = "0.1.0"
edition = "2024"
authors = ["fedro86"]
description = "Intelligent migration tool from APT (system-wide) to Homebrew (user-space)"
license = "MIT"
repository = "https://github.com/fedro86/apt2brew"
keywords = ["apt", "homebrew", "migration", "linux", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
which = "7"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "fedro86"
copyright = "2026, fedro86"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/apt2brew", "usr/bin/", "755"],
]
